# chimera

./: .coderabbit.yaml  .env.example  .gitignore  Makefile  pyproject.toml
.cursor/: rules
.cursor/rules/: agent.mdc
.github/: copilot-instructions.md
.github/workflows/: main.yml
docker/: Dockerfile
research/: architectural_strategy.md  research_summary.md  tooling_strategy.md
skills/: README.md
skills/content_generator/: __init__.py  contract.json
skills/social_publisher/: __init__.py  contract.json
skills/trend_fetcher/: __init__.py  contract.json
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
specs/schemas/: mcp_tool.schema.json  task.schema.json
tests/: test_skills_interface.py  test_trend_fetcher.py
