[project]
name = "chimera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
